# botobuddy

./: .flake8  .gitignore  CHANGELOG.md  GEMINI.md  README.md  cli.py  common.py  dynamo.py  hosted_zone.py  pyproject.toml  route53.py  s3.py
.github/workflows/: publish.yml
.jules/: scrutineer.md  sentinel.md
src/botobuddy/: apigw.py  auth.py  awslambda.py  cli.py  cloudformation.py  cognito.py  common.py  dynamo.py  logger.py  route53.py  s3.py  sagemaker.py  secman.py  ssm.py  utils.py
