[project]
name = "botobuddy"
version = "0.1.0"
description = "A Collection of Extension Functions Based on Boto3"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "boto3>=1.38.15",
    "click>=8.2.0",
    "randomname>=0.2.1",
    "types-boto3[essential,route53,sts]>=1.38.35",
]

[project.scripts]
botobuddy = "botobuddy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/botobuddy"]
