[project]
name = "botobuddy"
version = "0.2.0"
description = "A Collection of Extension Functions Based on Boto3"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Boris Resnick", email = "boris.resnick@gmail.com" },
]
license = { file = "LICENSE" }
dependencies = [
    "boto3>=1.38.15",
    "click>=8.2.0",
    "randomname>=0.2.1",
    "rich>=14.0.0",
    "types-boto3[essential,route53,sts,sagemaker,cognito-idp]>=1.38.35",
]

[project.urls]
Homepage = "https://github.com/scartill/botobuddy"
Changelog = "https://github.com/scartill/botobuddy/blob/main/CHANGELOG.md"

[project.scripts]
botobuddy = "botobuddy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/botobuddy"]

[dependency-groups]
dev = [
    "twine>=6.1.0",
]
