[project]
name = "botobuddy"
version = "0.3.5"
description = "A Collection of Extension Functions Based on Boto3"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Boris Resnick", email = "boris.resnick@gmail.com" },
]
license-files = ["LICENSE"]
dependencies = [
    "boto3>=1.38.15",
    "click>=8.2.0",
    "python-benedict[s3,toml,yaml]>=0.34.1",
    "randomname>=0.2.1",
    "rich>=13.0.0",
    "types-boto3[essential,route53,sts,sagemaker,cognito-idp]>=1.38.35",
]

[project.urls]
Homepage = "https://github.com/scartill/botobuddy"
Changelog = "https://github.com/scartill/botobuddy/blob/main/CHANGELOG.md"

[tool.uv]
package = true

[project.scripts]
botobuddy = "botobuddy.cli:main"

[dependency-groups]
dev = [
    "twine>=6.1.0",
]
